force-app/main/default/objects/Bear__c/Bear__c.object-meta.xml
<CustomObject>
    <label>Bear</label>
    <nameField>
        <label>Bear Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bears</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>