force-app/main/default/objects/Bear__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <defaultValue>&quot;https://disneynews.us/wp-content/uploads/2019/11/baloo-bear-the-jungle-book-disney.jpg&quot;</defaultValue>
    <label>Photo</label>
    <type>Url</type>
</CustomField>