force-app/main/default/objects/Bear__c/fields/Supervisor1__c.field-meta.xml
<CustomField>
    <fullName>Supervisor1__c</fullName>
    <label>Supervisor1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>