force-app/main/default/objects/Bear__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bears</relationshipLabel>
    <relationshipName>Bears</relationshipName>
    <type>Lookup</type>
</CustomField>