force-app/main/default/objects/Bear__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (kg)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>